--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </ul>
     <section id="welcome" class="parellax-container">
         <div class="parellax-inner">
-            <img src="tim.jpg" class="profile">
+            <img src="alhan.png" class="profile">
             <h1>
                 <span id="i">
                 I Am<br>
